Save Info Dialog

--- a/extensions/VisualEditor/wikia/VisualEditor.scss
+++ b/extensions/VisualEditor/wikia/VisualEditor.scss
@@ -19,6 +19,7 @@
 @import "modules/ve/ui/styles/ve.ui.WikiaSourceModeDialog";
 @import "modules/ve/ui/styles/ve.ui.WikiaMediaInsertDialog";
 @import "modules/ve/ui/styles/ve.ui.WikiaDropTargetWidget";
+@import "modules/ve/ui/styles/ve.ui.WikiaEditDetailsDialog";
 @import "modules/ve/ui/styles/ve.ui.WikiaMediaPreviewWidget";
 @import "modules/ve/ui/styles/ve.ui.WikiaSingleMediaInsertDialog";
 @import "modules/ve/ui/styles/ve.ui.WikiaMapInsertDialog";
