Save progress spinner 1

--- a/extensions/VisualEditor/wikia/VisualEditor.scss
+++ b/extensions/VisualEditor/wikia/VisualEditor.scss
@@ -11,6 +11,7 @@
 @import "modules/ve/ui/styles/ve.ui.Dialog";
 @import "modules/ve/ui/styles/ve.ui.Icons-vector";
 @import "modules/ve/ui/styles/ve.ui.MWSaveDialog";
+@import "modules/ve/ui/styles/ve.ui.SaveProgressSpinner";
 @import "modules/ve/ui/styles/ve.ui.Surface";
 @import "modules/ve/ui/styles/ve.ui.Toolbar";
 @import "modules/ve/ui/styles/ve.ui.ToolGroup";
